--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <style>
       body {
-        background-image: url('C:\Users\Rescuer\Desktop\Naila Courses\Client web technologies\html image\expensesimage.jpg');
+        background-image: ('C:\Users\Rescuer\Desktop\Naila Courses\Client web technologies\html image\expensesimage.jpg');
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100% 100%;
