--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <style>
       body {
-        background-image: ('C:\Users\Rescuer\Desktop\Naila Courses\Client web technologies\html image\expensesimage.jpg');
+        background-image: "C:\Users\Rescuer\Desktop\Naila Courses\Client web technologies\html image\expensesimage.jpg";
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100% 100%;
       }
-      </style>ww
+      </style>
     <h2>Expense Tracker</h2>
 
     <div class="container">
