--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
     <link rel="stylesheet" href="style.css" />
     <title>Expense Tracker</title>
   </head>
-  <body>
-    <style>
-      body {
-        background-image: "C:\Users\Rescuer\Desktop\Naila Courses\Client web technologies\html image\expensesimage.jpg";
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        background-size: 100% 100%;
-      }
-      </style>
+  <Body background="/C:\Users\Rescuer\Desktop\Naila Courses\Client web technologies\html image\expensesimage.jpg">
+      
     <h2>Expense Tracker</h2>
 
     <div class="container">
