--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Expense Tracker</title>
   </head>
-  <Body background="/C:\Users\Rescuer\Desktop\Naila Courses\Client web technologies\html image\expensesimage.jpg">
+  <Body background="/C:\Users\Rescuer\Desktop\Naila Courses\Client web technologies\html image\expensesimage.jpg"/>
       
     <h2>Expense Tracker</h2>
 
