--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Expense Tracker</title>
   </head>
-  <Body background="/C:\Users\Rescuer\Desktop\Naila Courses\Client web technologies\html image\expensesimage.jpg"/>
+    <img src="expensesimage.jpeg" alt="expense image" width="42" height="42" style="vertical-align:top">
       
     <h2>Expense Tracker</h2>
 
