--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Expense Tracker</title>
   </head>
-    <img src="expensesimage.jpeg" alt="expense image" width="42" height="42" style="vertical-align:top">
+    <img src="expensesimage.jpeg"  width="150" height="85" style="vertical-align:top">
       
     <h2>Expense Tracker</h2>
 
