--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css" />
     <title>Expense Tracker</title>
   </head>
-    <img src="expensesimage.jpeg"  width="150" height="85" style="vertical-align:top">
+     <div><img src="expensesimage.jpg" height="150" width="200"></div>
+      <div id="piechart"></div>
+      <script type="text/script.js" src="https://www.gstatic.com/charts/loader.js"></script>
       
     <h2>Expense Tracker</h2>
 
