--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Expense Tracker</title>
   </head>
      <div><img src="expensesimage.jpg" height="150" width="200"></div>
-      <div id="piechart"></div>
-      <script type="text/script.js" src="https://www.gstatic.com/charts/loader.js"></script>
+     <div class="wrapper">
+     <div class="d1"><div><span>60%</span></div></div>
+     <div class="d2"><div><span>22%</span></div></div>
+     <div class="d3"><div><span>8%</span></div></div>
+     <div class="d4"><div><span>7%</span></div></div>
+     <div class="d5"><div><span>3%</span></div></div>
+</div>
       
     <h2>Expense Tracker</h2>
 
